--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_svg: ^1.1.6
   carousel_slider: ^4.1.1
   cached_network_image: ^3.2.3
+  intl: ^0.17.0
 
 
 dev_dependencies:
