--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   carousel_slider: ^4.1.1
   cached_network_image: ^3.2.3
   intl: ^0.17.0
+  dropdown_button2: ^1.9.2
 
 
 dev_dependencies:
