--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   cached_network_image: ^3.2.3
   intl: ^0.17.0
   dropdown_button2: ^1.9.2
+  flutter_rating_bar: ^4.0.1
+  contained_tab_bar_view: ^0.8.0
 
 
 dev_dependencies:
