--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,11 @@ dependencies:
   dropdown_button2: ^1.9.2
   flutter_rating_bar: ^4.0.1
   contained_tab_bar_view: ^0.8.0
+  dio: ^4.0.6
+  equatable: ^2.0.5
+  bloc: ^8.1.0
+  flutter_bloc: ^8.1.1
+  go_router: ^5.2.1
 
 
 dev_dependencies:
